	  and disable interrupts via the BASEPRI register.
	* arch/arm/Kconfig:  Add new option CONFIG_ARM7VM_USEBASEI
	* arch/arm/src/*/*_irq.c:  Set the priority of the SVCALL exception
	  to the highest possible value.
	* arch/armv7-m/up_hardfault.c:  Fail if a hardfault occurs
	  while CONFIG_ARM7VM_USEBASEPRI=y.
	* arch/arm/src/stm32/stm32_serial.c:  Add support for USART
	  single wire more (Contributed by the PX4 team).
	* sched/: Implement support for retaining child task status after
	  the child task exists.  This is behavior required by POSIX.
	  But in NuttX is only enabled with CONFIG_SCHED_HAVE_PARENT and
	  CONFIG_SCHED_CHILD_STATUS
	* Add support for keyboard encode to the keypad test (from
	  Denis Carikli).
	* configs/olimex-lpc1766stk/nettest:  Configuration converted to
	  use the kconfig-frontends tools.
	* net/net_poll.c:  Split net_poll() to create psock_poll() too.
	* net/net_poll.c:  Fix poll/select issure reported by Qiang:
	  poll_interrupt() must cat call net_lostconnection() when a
	  loss of connection is reported.  Otherwise, the system will
	  not know that the connection has been lost.
	* sched/group_create.c, group_join.c, and group_leave.c:  Add
	  support for task groups.
	* sched/group_signal.c and task_exithook.c:  Send signal to all
	  members for the parent task group.
	* include/nuttx/sched.h and sched/env_*.c:  Move environment
	  variables into task group structure.
	* sched/: Lots of file changed.  Don't keep the parent task's
	  task ID in the child task's TCB.  Instead, keep the parent
	  task group IN the child task's task group.
	* fs/, sched/, include/nuttx/sched.h, and include/nutts/fs/fs.h:
	  Move file data from the TCB to the task group structure.
	* libc/stdio/, sched/, include/nuttx/lib.h, and include/nutts/fs/fs.h:
	  Move stream data from the TCB to the task group structure.
	* net/, sched/, and include/nuttx/net/net.h:  Move socket data
	  from the TCB to the task group structure.